Changed some property names
Changed some property names in mongoose schema and swagger

#1
